[package]
name = "zik-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "~0.27.0", features = ["bundled"] }
directories = "~4.0"
clap = { version = "~3.1.15", features = ["std", "color"] }
walkdir = "~2.3.2"

# Metadata parsers
metaflac = "~0.2"
mp4parse = "~0.12.0"
